[tool.poetry]
name = "ibkr"
version = "0.1.0"
description = "Trading application for ibkr"
authors = ["Peter Nguyen <peterlongnguyen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ib-insync = "^0.9.70"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
